// Andrea Ambrosini - Rossonet s.c.a r.l.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.rossonet.ptalk.ability.grpc";
option java_outer_classname = "PtaskAbilityApi";

import "ptalk-base-api.proto";

package ability;

message AbilityMessageRequest {
  string flowReference = 1;
  string messageReference = 2;
  string replyTask = 3;
  base.Data message = 4;
  repeated base.Data additionalDatas = 5;
  repeated base.Tag tags = 6;
}

message AbilityMessageReply {
  string flowReference = 1;
  string messageReference = 2;
  string task = 3;
  base.Data reply = 4;
  base.StatusValue status = 5;
  repeated base.Data additionalDatas = 6;
  repeated base.Tag tags = 7;
}

message CancelRuleRequest {

}

message CancelRuleReply {

}

message RegisterRulesRequest {

}

message RegisterRulesReply {

}

message ListRulesRequest {

}

message ListRulesReply {

}

message DumpConfigurationRequest {

}

message DumpConfigurationReply {

}

message PushConfigurationRequest {

}

message PushConfigurationReply {

}

message MemoryContextRequest {

}

message MemoryContextReply {

}

message GeneralConfigurationRequest {

}

message GeneralConfigurationReply {

}

service RpcAbilityCoreV1 {
  rpc ReplyAsync (AbilityMessageReply) returns (base.Status) {}
  rpc RegisterRules (RegisterRulesRequest) returns (RegisterRulesReply) {}
  rpc CancelRule (CancelRuleRequest) returns (CancelRuleReply) {}
  rpc ListRules (ListRulesRequest) returns (ListRulesReply) {}
  rpc Memory (MemoryContextRequest) returns (MemoryContextReply) {}
  rpc GeneralConfiguration (GeneralConfigurationRequest) returns (GeneralConfigurationReply) {}
}

service RpcAbilityUnitV1 {
  rpc CallSync (AbilityMessageRequest) returns (AbilityMessageReply) {}
  rpc CallAsync (AbilityMessageRequest) returns (base.Status) {}
}

service RpcSuperAbilityCoreV1 {
  rpc PushConfiguration (PushConfigurationRequest) returns (PushConfigurationReply) {}
  rpc DumpConfiguration (DumpConfigurationRequest) returns (DumpConfigurationReply) {}
}

