// Andrea Ambrosini - Rossonet s.c.a r.l.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.rossonet.ptalk.nlu.grpc";
option java_outer_classname = "PtalkNluApi";

import "ptalk-base-api.proto";

package nlu;

message NluMessageRequest {
  string flowReference = 1;
  string messageReference = 2;
  string model = 3;
  string modelVersion = 4;
  string replyTask = 5;
  base.Data message = 6;
  string contextJson = 7;
  repeated base.Data additionalDatas = 8;
  repeated base.Tag tags = 9;
}

message NluMessageReply {
  string flowReference = 1;
  string messageReference = 2;
  string model = 3;
  string modelVersion = 4;
  string task = 5;
  base.Data reply = 6;
  string contextJson = 7;
  base.StatusValue status = 8;
  repeated base.Data additionalDatas = 9;
  repeated base.Tag tags = 10;
}

message NluTrainingModelRequest {

}

message NluTrainingModelReply {

}

message NluListModelsRequest {

}

message NluListModelsReply {

}

message NluDeleteModelRequest {

}

message NluDeleteModelReply {

}

service RpcNluCoreV1 {
  rpc ReplyCallAsync (NluMessageReply) returns (base.Status) {}
  rpc ReplyTrainingModelAsync (NluTrainingModelReply) returns (base.Status) {}
}

service RpcNluUnitV1 {
  rpc CallSync (NluMessageRequest) returns (NluMessageReply) {}
  rpc CallAsync (NluMessageRequest) returns (base.Status) {}
  rpc TrainModelSync (NluTrainingModelRequest) returns (NluTrainingModelReply) {}
  rpc TrainModelAsync (NluTrainingModelRequest) returns (base.Status) {}
  rpc ListModels (NluListModelsRequest) returns (NluListModelsReply) {}
  rpc DeleteModel (NluDeleteModelRequest) returns (NluDeleteModelReply) {}
}

